Add finance DTOs, notification and schedulers
Enable scheduling and introduce a large refactor to support finance reporting, exports and improved notifications. Key changes:

- Enable @EnableScheduling in StreamFlixApplication.
- Expand Finance API: FinanceController now delegates to RevenueAnalyticsService and ReportExportService and exposes dashboard, reports (MRR/ARR/Churn/ARPU-LTV), exports (CSV/PDF), invoices, payments, refunds and snapshots endpoints.
- Add many finance DTOs (FinanceDashboardDTO, MrrReportDTO, ArrReportDTO, ArpuLtvReportDTO, MonthlyTrendDTO, MonthlyChurnDTO, RevenueSnapshotDTO, InvoiceRecordDTO, PaymentRecordDTO, PlanRevenueDTO, RegionRevenueDTO, RefundCreditDTO) to model reports and payloads.
- Replace old report service with ReportExportService + implementations to generate CSV/PDF exports.
- Notifications: NotificationController now exposes /api/notifications/me, uses CustomerRepository to resolve customer from authenticated User and returns NotificationResponse DTO. Added NotificationResponse and expanded NotificationDTO fields.
- Entities updated: Notification reworked (fields/enum types/annotations/builder), RevenueSnapshot converted to richer types (BigDecimal for churns, createdAt non-updatable), DunningRetryLog now uses DunningStatus enum, InvoiceLineItem LineType adds CREDIT.
- New enums: DunningStatus and NotificationStatus.
- Exception handling: cleaned up GlobalExceptionHandler formatting and preserved behavior; removed an inner PaymentPendingException from CustomException.
- Added schedulers and billing/retry service implementations and removed some legacy cycle/report service classes.

These changes add structured DTOs and endpoints for financial analytics and reporting, improve notification handling, and introduce background schedulers and clearer enums/entities for dunning and notifications.